# thud-generator

./: .gitignore  Dockerfile  pyproject.toml
thud_generator/: api.py  main.py  models.py
