[tool.poetry]
name = "thud-generator"
version = "0.1.0"
description = ""
authors = ["mehmetcc <mehmetccm@gmail.com>"]
readme = "README.md"
packages = [{include = "thud_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.3"

[tool.poetry.scripts]
start = "thud_generator.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
